# tensorx

./: .gitignore  .travis.yml  404.html  CNAME  CONTRIBUTING.md  LICENCE  Pipfile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
api/: index.html
api/activation/: index.html
api/init/: index.html
api/layers/: index.html
api/layers/Activation/: index.html
api/layers/Input/: index.html
api/layers/Lambda/: index.html
api/layers/Layer/: index.html
api/layers/Linear/: index.html
api/layers/Lookup/: index.html
api/layers/MHAttention/: index.html
api/layers/Module/: index.html
api/layers/rnn/BaseRNNCell/: index.html
api/layers/rnn/GRUCell/: index.html
api/layers/rnn/LSTMCell/: index.html
api/layers/rnn/RNN/: index.html
api/layers/rnn/RNNCell/: index.html
api/layers/utils/LayerConfig/: index.html
api/layers/utils/LayerState/: index.html
api/loss/: index.html
api/math/: index.html
api/metrics/: index.html
api/ops/: index.html
api/train/Callback/: index.html
api/train/Model/: index.html
api/train/model/: index.html
api/utils/Graph/: index.html
contributing/: index.html
docs/: Makefile  README.md  api.rst  build_docs.sh  conf.py  config.yaml  docstring_template.md  gendocs.py  gendocs.yaml  getting-started.rst  index.rst  install.rst  layers_core.rst  modules.rst  parse.py  requirements.txt  tensorx.rst
docs/templates/: index.md  init.md  math.md  transform.md
docs/templates/api/: activation.md  init.md  layers.md  math.md  ops.md
docs/templates/api/layers/: index.md
docs/templates/layers/: core.md
docs/templates/start/: install.md  tutorial.md
docs/templates/started/: install.md
docs/theme/: main.html
docs/theme/partials/: footer.html  header.html
search/: search_index.json
start/install/: index.html
start/tutorial/: index.html
tensorx/: __init__.py  __version__.py  activation.py  callbacks.py  init.py  layers.py  learn.py  logic.py  loss.py  math.py  metrics.py  model.py  ops.py  optimizers.py  random.py  som.py  struct.py  test_utils.py  train.py  training.py  transform.py  utils.py
tensorx/data/: itertools.py  iterx.py
tensorx/train/: __init__.py  callbacks.py  model.py
tensorx/utils/: data.py  transform.py
tests/: callbacks.py  test.csv  test_activation.py  test_autograph.py  test_callbacks.py  test_expand_vars.py  test_gradients.py  test_implementations.py  test_layers.py  test_logic.py  test_loss.py  test_math.py  test_metrics.py  test_model.py  test_models.py  test_ops.py  test_random.py  test_scopes.py  test_serialization.py  test_som_gather.py  test_somlinear.py  test_sparsemax.py  test_sparsemax_loss.py  test_struct.py  test_train.py  test_training.py  test_transform.py  test_utils.py
tests/data/: mnist_10x.npy  test_itertools.py
